firewall - eth.conf
# Generated by xtables-save v1.8.2 on Tue Nov  5 13:47:46 2019
*filter
:INPUT DROP [7346:8632427]
:FORWARD DROP [9309:704638]
:OUTPUT DROP [7829:604880]
-A INPUT -s 192.168.20.2/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth2 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 192.168.20.4/32 -o eth2 -p tcp -m tcp --sport 8080 -j ACCEPT
-A FORWARD -s 192.168.20.4/32 -o eth1 -p tcp -m tcp --dport 8080 -j ACCEPT
-A FORWARD -o eth2 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth2 -o eth0 -j ACCEPT
-A OUTPUT -d 192.168.20.2/32 -p tcp -m tcp --sport 22 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o eth0 -j ACCEPT
-A OUTPUT -o eth2 -j ACCEPT
COMMIT
# Completed on Tue Nov  5 13:47:46 2019
# Generated by xtables-save v1.8.2 on Tue Nov  5 13:47:46 2019
*nat
:PREROUTING ACCEPT [5846:524124]
:INPUT ACCEPT [26:2688]
:POSTROUTING ACCEPT [9:540]
:OUTPUT ACCEPT [64:4492]
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Tue Nov  5 13:47:46 2019
