firewall.conf
# Generated by iptables-save v1.4.21 on Tue Nov 12 13:46:04 2019
*nat
:PREROUTING ACCEPT [60:17646]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [24:1704]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Tue Nov 12 13:46:04 2019
# Generated by iptables-save v1.4.21 on Tue Nov 12 13:46:04 2019
*filter
:INPUT DROP [60:17646]
:FORWARD DROP [0:0]
:OUTPUT DROP [24:1704]
-A INPUT -s 192.168.20.2/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth2 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 192.168.20.4/32 -o eth2 -p tcp -m tcp --sport 8080 -j ACCEPT
-A FORWARD -s 192.168.20.4/32 -o eth1 -p tcp -m tcp --dport 8080 -j ACCEPT
-A FORWARD -o eth2 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth2 -o eth0 -j ACCEPT
-A OUTPUT -d 192.168.20.2/32 -p tcp -m tcp --sport 22 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o eth0 -j ACCEPT
-A OUTPUT -o eth2 -j ACCEPT
COMMIT
# Completed on Tue Nov 12 13:46:04 2019
